PR/51572: calling funopen on each printw call is a tad excessive, but this is not a reason for funopen to leak. Always call the close function since we are indirecting through our cookie and we need to free it.